--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Use Node.js 20.17.0
       uses: actions/setup-node@v4
       with:
-        cache-dependency-path: subdir/package-lock.json
+        cache-dependency-path: package-lock.json
         node-version: 20.17.0
         cache: 'npm'
     - run: npm ci
