--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: 'vue-3-crash-course'
+        
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
